--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.201706190042.1+a2776648cd48d4937b076fb8b3e935d3d5fb27e1",
   "description": "A nicer version of microsoft/typescript packaged and released for API developers",
   "main": "./bin/ntypescript.js",
+  "scripts": {
+    "debug": "ts-node debug/scan.ts"
+  },
   "bin": {
     "ntsc": "./bin/tsc"
   },
