feat: 增加绑定器注解

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "runtimeExecutable": "npm",
       "runtimeArgs": [
         "run-script",
-        "debug:parse"
+        "debug:error"
       ],
       "skipFiles": [
         "<node_internals>/**"
